Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4745

pRecord.failCount not init in ParentRecord::ProcessParents

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • Parent Proxy
    • None

    Description

      the failCount is not init,is may be an big number ( it already happend in my sisution),after the ats is startup.
      it will cause the parent immediately marked down,once connect the parent failed.

      fix the code:
      this->parents[i].failCount = 0;//added by xdchen,line:447

      Attachments

        Activity

          People

            jrushford John Rushford
            keith2008 xiangdong chen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h 40m
                1h 40m