TS-4745: pRecord.failCount not init in ParentRecord::ProcessParents