proxy/ParentConsistentHash.cc
@@ -143,8 +143,6 @@ ParentConsistentHash::selectParent(const ParentSelectionPolicy *policy, bool fir
         if (prtmp) {
           pRec = (parents[last_lookup] + prtmp->idx);
         }
-        else  
-          pRec = NULL; 
       } while (prtmp && strcmp(prtmp->hostname, result->hostname) == 0);
     }
   }
@@ -187,8 +185,6 @@ ParentConsistentHash::selectParent(const ParentSelectionPolicy *policy, bool fir
           pRec = (parents[last_lookup] + prtmp->idx);
           Debug("parent_select", "Selected a new parent: %s.", pRec->hostname);
         }
-        else
-          pRec = NULL;
       }
       if (wrap_around[PRIMARY] && chash[SECONDARY] == NULL) {
         Debug("parent_select", "No available parents.");
